予測結果にモデルのRMSE情報を追加
